# pkNet

./: CMakeLists.txt  README.md
client/: CMakeLists.txt  chatbuffer.cpp  chatbuffer.h  game.cpp  game.h  gamephase.cpp  gamephase.h  menuphase.cpp  netclient.cpp  netclient.h  netconsts.h  phase.h  phasestatemachine.cpp
common/: CMakeLists.txt  pknet.cpp  pknet.h
pkClient/: CMakeLists.txt  game.cpp  gamephase.cpp  main.cpp  menuphase.cpp  menuphase.h  phasestatemachine.h
pkCommon/: CMakeLists.txt  netcmd.cpp
pkServer/: CMakeLists.txt  netcmd.h
server/: CMakeLists.txt  main.cpp
